--- a/sota-implementations/cql/minari_discrete_config.yaml
+++ b/sota-implementations/cql/minari_discrete_config.yaml
@@ -29,8 +29,8 @@ logger:
   mode: online
   video: true
   eval_envs: 1
-  eval_iter: 5000
-  eval_steps: 1000
+  eval_iter: 200
+  eval_steps: 200
 
 # -------- model (Q-network / policy) --------
 model:
@@ -79,7 +79,7 @@ collector:
 optim:
   seed: 0
   device: ""               # auto: cuda:0 if available, else cpu
-  gradient_steps: 100000
+  gradient_steps: 2000
   policy_eval_start: 10000
   lr: 3e-4
   weight_decay: 0.0
@@ -91,3 +91,19 @@ compile:
   compile: false
   compile_mode: null       # "reduce-overhead" | "max-autotune" | "default"
   cudagraphs: false
+
+debug:
+  enable: true           # turn whole suite on/off
+  freq: 500              # run on-batch checks every N steps
+  save_dir: "debug_local"   # local folder for dumps
+  log_batch_samples: 2   # how many missions/actions to print from a batch
+  checks:
+    - dataset_head
+    - encoding_invariants
+    - preprocessor_smoke
+    - model_forward
+    - loss_forward
+    - bc_probe
+    - next_keys
+    - eval_rollout_smoke
+    - grad_health
